--- a/pipeline.yml
+++ b/pipeline.yml
@@ -2,7 +2,7 @@ pool:
   name: Azure Pipelines
   demands: maven
 
-#Your build pipeline references an undefined variable named ‘Parameters.mavenPOMFile’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab. See https://go.microsoft.com/fwlink/?linkid=865972
+#Your build pipeline references an undefined variable named â€˜Parameters.mavenPOMFileâ€™. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab. See https://go.microsoft.com/fwlink/?linkid=865972
 
 steps:
 - task: Maven@3
